Sampled pickle object for dash app

--- a/working.ipynb
+++ b/working.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1023,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11081, 26604)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "playlist_song_mat_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(playlist_song_mat_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playlist_song_mat_train_sample10 = playlist_song_mat_train.sample(frac=0.1, replace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playlist_song_mat_train_sample90 = playlist_song_mat_train.sample(frac=0.9, replace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1108, 26604)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "playlist_song_mat_train_sample10.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9973, 26604)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "playlist_song_mat_train_sample90.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playlist_song_mat_train_sample50 = playlist_song_mat_train.sample(frac=0.5, replace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playlist_song_mat_train_sample25 = playlist_song_mat_train.sample(frac=0.25, replace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,10 +1150,11 @@
     "# Dump\n",
     "#dill.dump(df_playlists_train, open(\"df_playlists_train.pkl\", \"wb\"))\n",
     "#dill.dump(playlist_song_mat_train, open(\"playlist_song_mat_train.pkl\", \"wb\"))\n",
+    "dill.dump(playlist_song_mat_train_sample25, open(\"playlist_song_mat_train_sample25.pkl\", \"wb\"))\n",
     "\n",
     "# Load\n",
-    "df_playlists_train = dill.load(open(\"df_playlists_train.pkl\", \"rb\"))\n",
-    "playlist_song_mat_train = dill.load(open(\"playlist_song_mat_train.pkl\", \"rb\"))"
+    "#df_playlists_train = dill.load(open(\"df_playlists_train.pkl\", \"rb\"))\n",
+    "#playlist_song_mat_train = dill.load(open(\"playlist_song_mat_train.pkl\", \"rb\"))\n"
    ]
   },
   {
